# 90-day-0-to-API

./: Makefile  README.md
.github/workflows/: go.yml  lint.yml  python.yml
Problems/Phase 1 - Foundations/Day 0 - Hello World + Sum of Array/: Problem.md
Problems/Phase 1 - Foundations/Day 1 - Two Sum/: Problem.md
Problems/Phase 1 - Foundations/Day 10 - Merge Two Sorted Arrays/: Problem.md
Problems/Phase 1 - Foundations/Day 11 — Best Time to Buy and Sell Stock (Single Transaction)/: Problem.md
Problems/Phase 1 - Foundations/Day 12 — Remove Duplicates from Sorted Array (In-Place)/: Problem.md
Problems/Phase 1 - Foundations/Day 13 — Longest Substring Without Repeating Characters/: Problem.md
Problems/Phase 1 - Foundations/Day 14 — Move Zeroes/: Problem.md
Problems/Phase 1 - Foundations/Day 2 - Running Sum/: Problem.md
Problems/Phase 1 - Foundations/Day 3 - Max Consecutive Ones/: Problem.md
Problems/Phase 1 - Foundations/Day 4 - Valid Parentheses/: Problem.md
Problems/Phase 1 - Foundations/Day 5 - Contains Duplicate/: Problem.md
Problems/Phase 1 - Foundations/Day 6 - Intersection of Two Arrays/: Problem.md
Problems/Phase 1 - Foundations/Day 7 - Maximum Subarray/: Problem.md
Problems/Phase 1 - Foundations/Day 8 - Two Sum (index based)/: Problem.md
Problems/Phase 1 - Foundations/Day 9 - Valid Parenthesis Brackets and Braces/: Problem.md
Setup/: init.ps1
go/: README.md  go.mod
python/: README.md  pyproject.toml  requirements.txt
python/src/common/: __init__.py  test_helpers.py
(+56 files in other folders)
