# What it is:
#The modern, canonical configuration file for Python projects.
# What it replaces (over time):
# setup.py
# Tool-specific config files (setup.cfg, .flake8, etc.)
# Why you want it even early:
# Central place for tool configuration (formatter, linter, test runner)
# Future-proof (PEP 517 / 518)
# Required if you ever package or publish anything

# Analogy (Cloud):
# This is your service manifest — like a Helm chart or Terraform module metadata.
# Even if it’s mostly empty at first, it establishes structure and intent.



[project]
name = "90day-python"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["Problems"]
python_files = ["*Solution.py"]
addopts = "-q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true